removed extra comma

--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
   "bugs": {
     "url": "https://github.com/brutalhonesty/updatePHPJSONDocs/issues"
   },
-  "licenses": [
-    {
+  "licenses": [{
       "type": "MIT",
       "url": "https://github.com/brutalhonesty/updatePHPJSONDocs/blob/master/LICENSE"
-    }
-  ],
+  }],
   "engines": {
     "node": ">=0.10"
   },
@@ -32,5 +30,5 @@
     "PHP"
   ],
   "readme": "Update PHP Docs\n=========\nNodeJS script to recursively call the PHP site and get the description of each function and update the JSON file.\n\nAuthor\n------\n[Adam Schodde]\n\nVersion\n-------\n\n0.0.1\n\n\nRun\n--------------\n\n```sh\nnpm install\nnode main.js\n```\n\n\nLicense\n-------\n\n[MIT]\n\n\t[Adam Schodde]: http://github.com/brutalhonesty\n\t[MIT]: http://www.tldrlegal.com/license/mit-license",
-  "readmeFilename": "README.md",
+  "readmeFilename": "README.md"
 }
